--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "dotenv": "^17.3.1",
+    "ejs": "^4.0.1",
     "express": "^5.2.1",
+    "morgan": "^1.10.1",
     "nodemon": "^3.1.11"
   }
 }
